add scroll-to-bottom button with smooth scrolling functionality

--- a/src/app/datenschutz/datenschutz.component.html
+++ b/src/app/datenschutz/datenschutz.component.html
@@ -116,4 +116,11 @@
       </button>
     </div>
   </div>
+
+  <!-- Scroll to Bottom Button - Fixed bottom right -->
+  <button class="scroll-to-bottom-btn btn btn-circle btn-primary" (click)="scrollToBottom()" title="Zum Ende scrollen">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+    </svg>
+  </button>
 </div>
